--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         run: dotnet restore
 
       - name: Build Application
-        run: dotnet test --configuration Release --no-restore
+        run: dotnet build --configuration Release --no-restore
         
       - name: Run Tests
         run: dotnet test --configuration Release --no-restore --verbosity normal
