--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -47,14 +47,10 @@ jobs:
         with:
           name: published-app
           path: publish
-          
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: "Teju-WebApp-CI-CD"
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: publish
